<resources>
    <string name="app_name">MyFirstAPP</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">send</string>
    <string name="she_zhi">设置</string>
    <string name="ge_ren_xin_xi">个人信息</string>
    <string name="da_yu">＞</string>
    <string name="z_h_x_x_g_l">账号信息管理</string>
    <string name="s_q_h_d_s_z">社区活动设置</string>
    <string name="x_x_x_t_z">新消息通知</string>
    <string name="y_k_q_h_g_b_x_x_t_z">要开启或关闭消息通知,请在手机设置-通知-自如中更……</string>
    <string name="t_y">通用</string>
    <string name="g_y_w_m">关于我们</string>
    <string name="d_q_b_b">当前版本</string>
    <string name="t_c_d_l">退出登录</string>
    <string name="b_b_h">7.3.3</string>
    <string name="y_s_s_z">隐私设置</string>
    <string name="x_t_q_x">系统权限管理</string>
    <string name="q_c_h_c">清除缓存</string>
    <string name="z_r_y_h_f_w_x_y">自如用户服务协议</string>
    <string name="z_r_w_y_s_z_c">自如网隐私政策</string>
    <string name="z_z_z_z_x_x">资质证照信息</string>
    <string name="j_b">违法和不良信息举报</string>
    <string name="z_r_k_x_m">自如客小米</string>
    <string name="b_j_m_c">点击编辑名称</string>
    <string name="z_j_x_x">证件信息</string>
    <string name="z_z_x_x">资质信息</string>
    <string name="x_l_x_x_">学历信息</string>
    <string name="y_h_m">用户名</string>
    <string name="s_j_h">手机号</string>
    <string name="y_x">邮箱</string>
    <string name="d_l_m_m">登录密码</string>
    <string name="q_s_z">去设置</string>
    <string name="q_b_d">去绑定</string>
    <string name="q_x_g">去修改</string>
    <string name="z_x_z_h">注销账号</string>
    <string name="z_h_z_x_w_f_h_f">账号将永久注销，无法恢复</string>
    <string name="Meeta_Activity">是否开启Meeta活动</string>
    <string name="q_p_x_q">是否开启气泡星球</string>
    <string name="Meeta_Friend">是否开启Meeta交友</string>
    <string name="title_activity_buttom_tabar">buttom_tabar</string>
    <string name="title_home">首页</string>
    <string name="title_user">我的</string>
    <string name="title_house">找房单</string>
    <string name="title_notifications">Notifications</string>
    <string name="addressChen_Du">成都</string>
    <string name="addressIcon">▽</string>
    <string name="y_f_y_j">月付/0押金/0元搬家*</string>
    <string name="h_z">合租</string>
</resources>
