<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="22dp"
    android:layout_marginRight="22dp"
    android:orientation="vertical"
    android:paddingTop="70dp"
    tools:context=".AccountInformationManagement">

    <!--账号信息管理-->
    <LinearLayout
        android:id="@+id/g_y_w_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="45dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/z_h_x_x_g_l"
            android:textColor="#272727"
            android:textSize="28sp" />
    </LinearLayout>

    <!--用户信息-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/y_h_m"
                android:textColor="#272727"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginTop="2dp"
                android:layout_toLeftOf="@+id/da_yu"
                android:text="@string/q_s_z"
                android:textColor="#999999"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/da_yu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:text="@string/da_yu"
                android:textSize="12sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/s_j_h"
                android:textColor="#272727"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginTop="2dp"
                android:layout_toLeftOf="@+id/da_yu1"
                android:text="189****7415"
                android:textColor="#444444"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/da_yu1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:text="@string/da_yu"
                android:textSize="12sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/y_x"
                android:textColor="#272727"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginTop="2dp"
                android:layout_toLeftOf="@+id/da_yu2"
                android:text="@string/q_b_d"
                android:textColor="#999999"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/da_yu2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:text="@string/da_yu"
                android:textSize="12sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="85dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/d_l_m_m"
                android:textColor="#272727"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginTop="2dp"
                android:layout_toLeftOf="@+id/da_yu3"
                android:text="@string/q_x_g"
                android:textColor="#999999"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/da_yu3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:text="@string/da_yu"
                android:textSize="12sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/z_x_z_h"
                android:textColor="#272727"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginTop="2dp"
                android:layout_toLeftOf="@+id/da_yu4"
                android:text="@string/z_h_z_x_w_f_h_f"
                android:textColor="#999999"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/da_yu4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:text="@string/da_yu"
                android:textSize="12sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>