<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSetting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical"
        android:paddingTop="10dp"
        tools:context=".UserSetting">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/she_zhi"
                android:textColor="#272727"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
        <!--设置的头-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/g_r_x_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/ge_ren_xin_xi"
                    android:textColor="#272727"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/da_yu"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/z_h_x_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/z_h_x_x_g_l"
                    android:textColor="#272727"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/da_yu"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/s_q_h_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/s_q_h_d_s_z"
                    android:textColor="#272727"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/da_yu"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>

        <!--hr分界线-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/home_user_phone_background" />

        <!--新消息通知-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp">

                <TextView
                    android:id="@+id/x_x_x_t_z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/x_x_x_t_z"
                    android:textColor="#272727"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/da_yu"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/x_x_x_t_z"
                    android:layout_marginTop="12dp"
                    android:text="@string/y_k_q_h_g_b_x_x_t_z"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/t_y"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/t_y"
                    android:textColor="#272727"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/da_yu"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>
        </LinearLayout>

        <!--hr分界线-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/home_user_phone_background" />

        <!--关于我们-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/g_y_w_m"
                    android:textColor="#272727"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/da_yu"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/d_q_b_b"
                    android:textColor="#272727"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/b_b_h"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/notLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <!--hr分界线-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/home_user_phone_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/LogOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_c_d_l"
                    android:textColor="#EF666E"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>