<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:paddingTop="70dp"
    tools:context=".aBoutUs">

    <!--关于我们-->
    <LinearLayout
        android:id="@+id/g_y_w_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="45dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_y_w_m"
            android:textColor="#272727"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>
    <!--协议们-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/g_y_w_m"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp">

            <TextView
                android:id="@+id/z_r_y_h_f_w_x_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/z_r_y_h_f_w_x_y"
                android:textColor="#272727"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:text="@string/da_yu"
                android:textSize="12sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp">

            <TextView
                android:id="@+id/z_r_w_y_s_z_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/z_r_w_y_s_z_c"
                android:textColor="#272727"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:text="@string/da_yu"
                android:textSize="12sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp">

            <TextView
                android:id="@+id/z_z_z_z_x_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/z_z_z_z_x_x"
                android:textColor="#272727"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:text="@string/da_yu"
                android:textSize="12sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp">

            <TextView
                android:id="@+id/j_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/j_b"
                android:textColor="#272727"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:text="@string/da_yu"
                android:textSize="12sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </LinearLayout>
    <!--LOGO-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="30dp">
       <ImageView
           android:layout_centerHorizontal="true"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/zi_room_zi_ru"
           android:layout_gravity="center"
           />
    </RelativeLayout>
</RelativeLayout>