<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".General">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:paddingTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/t_y"
                android:textColor="#272727"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!--hr分界线-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/home_user_phone_background" />

        <!--3位设置 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/y_s_s_z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/y_s_s_z"
                    android:textColor="#272727"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/da_yu"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>
        </LinearLayout>

        <!--hr分界线-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/home_user_phone_background" />

        <!--2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/x_t_q_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/x_t_q_x"
                    android:textColor="#272727"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/da_yu"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>
        </LinearLayout>

        <!--hr分界线-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/home_user_phone_background" />

        <!--3-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/q_c_h_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/q_c_h_c"
                    android:textColor="#272727"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/da_yu"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>
        </LinearLayout>
        <!--hr分界线-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/home_user_phone_background" />
    </LinearLayout>
</ScrollView>